# compilador

./: CMakeLists.txt  README.md
entradas/: entrada1.txt  entrada2.txt  entrada3.txt
src/: main.cpp
src/HeaderFiles/: lexical_analyser.h  syntactic_analyser.h
src/SourceFiles/: lexical_analyser.cpp  main.cpp  syntactic_analyser.cpp
